--- a/Tugas-2/public/css/style.css
+++ b/Tugas-2/public/css/style.css
@@ -43,7 +43,7 @@ nav{
 nav ul{
 	display: flex;
 	list-style: none;
-	width: 13%;
+	width: 20%;
 	justify-content: space-between;
 }
 
@@ -56,3 +56,35 @@ nav ul li a:hover{
 	color: #ffcccc;
 }
 
+ul {
+  	list-style-type: none;
+  	margin: 0;
+  	padding: 0;
+  	overflow: hidden;
+  	background-color: #fff;
+}
+
+/*li {
+  float: right;
+  border-right:1px solid #bbb;
+}
+
+li:last-child {
+  border-left: none;
+}*/
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color: #4CAF50;
+}
